# LumaSync

./: .actrc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_ip  test_ip.rs  test_ssrf  test_ssrf.rs  test_uuid.rs  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
.jules/: bolt.md
.opencode/: .gitignore  gsd-file-manifest.json  opencode.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  UI_REDESIGN_REPORT.md  config.json
.planning/debug/: calibration-edit-overlay-not-opening.md  dirty-exit-confirm-path-unclear.md  duplicate-tray-icon.md  macos-fullscreen-close-black-screen.md  overlay-open-fail-blocked-reason-not-visible.md  startup-toggle-desync.md  test-pattern-overlay-missing-on-display-switch.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-app-shell-and-baseline-defaults/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-I18N-ALIGNMENT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-usb-connection-setup/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-connection-resilience-and-health/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-calibration-workflow/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-07-PLAN.md  04-07-SUMMARY.md  04-08-PLAN.md  04-08-SUMMARY.md  04-09-PLAN.md  04-09-SUMMARY.md  04-10-PLAN.md  04-10-SUMMARY.md  04-11-PLAN.md  04-11-SUMMARY.md  04-12-PLAN.md  04-12-SUMMARY.md  04-13-PLAN.md  04-13-SUMMARY.md  04-14-PLAN.md  04-14-SUMMARY.md  04-15-PLAN.md  04-15-SUMMARY.md  04-CONTEXT.md  04-HARDWARE-UAT.md  04-RESEARCH.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-core-lighting-modes/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-HARDWARE-UAT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-runtime-quality-controls/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-telemetry-and-full-localization/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-stability-gate/: 08-CONTEXT.md  08-UAT.md  08-VALIDATION.md  08-VERIFICATION.md  08-stability-gate-01-SUMMARY.md  08-stability-gate-02-SUMMARY.md
.planning/phases/09-hue-bridge-onboarding/: 09-VERIFICATION.md  09-hue-bridge-onboarding-01-SUMMARY.md  09-hue-bridge-onboarding-02-SUMMARY.md
.planning/phases/10-hue-stream-lifecycle/: 10-CONTEXT.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md  10-hue-stream-lifecycle-01-SUMMARY.md  10-hue-stream-lifecycle-02-SUMMARY.md  10-hue-stream-lifecycle-03-SUMMARY.md  10-hue-stream-lifecycle-04-SUMMARY.md  10-hue-stream-lifecycle-05-SUMMARY.md
.planning/phases/14-contract-foundation/: 14-01-SUMMARY.md  14-02-SUMMARY.md  14-03-SUMMARY.md
.planning/phases/15-fault-recovery-and-diagnostics/: 15-01-SUMMARY.md  15-02-SUMMARY.md  15-CONTEXT.md  15-DISCUSSION-LOG.md
.planning/phases/16-hue-channel-position-editor/: 16-CONTEXT.md  16-DISCUSSION-LOG.md
.planning/phases/17-room-map-ui/: 17-01-SUMMARY.md  17-03-SUMMARY.md  17-04-SUMMARY.md  17-HUMAN-UAT.md  17-VERIFICATION.md
.planning/phases/18-hue-standalone-mode/: 18-02-SUMMARY.md
.planning/phases/19-led-zone-auto-derivation/: 19-01-SUMMARY.md  19-02-SUMMARY.md  19-03-SUMMARY.md
.planning/phases/20-device-ux-polish-and-channel-write-back/: 20-01-SUMMARY.md  20-02-SUMMARY.md  20-03-SUMMARY.md  20-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: debugging.md
docs/manual/: phase-01-tray-checklist.md
public/: calibration-overlay.html
scripts/verify/: macos-swift-runtime.sh  phase01-shell-contracts.mjs
src/: App.css  App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon@2x.rgba
src-tauri/src/: lib.rs  macos_window.rs  main.rs
src-tauri/src/commands/: ambilight_capture.rs  calibration.rs  device_connection.rs  device_handshake.rs  hue_http.rs  hue_intensity.rs  hue_onboarding.rs  hue_stream_lifecycle.rs  led_calibration.rs  led_output.rs  led_sink.rs  lighting_mode.rs  notifications.rs  platform.rs  room_map.rs  runtime_quality.rs  runtime_telemetry.rs  wled_discovery.rs  wled_sink.rs
src-tauri/src/commands/hue/: commands.rs  credential_store.rs  dtls.rs  frame.rs  mod.rs  reconnect.rs  retry.rs  sender.rs  state_store.rs  zone.rs
src-tauri/src/commands/room_map/: hue_zone.rs  mod.rs  save_load.rs  save_load.rs.orig  zone.rs
src-tauri/src/models/: room_map.rs
src-tauri/src/network/: mdns.rs  mod.rs
src-tauri/tests/: hue_onboarding_tdd.rs
src/__tests__/: App.test.tsx
src/app/: providers.tsx
src/dev/: HueAreaPreview.tsx  HueFaultSimulator.tsx
src/features/calibration/: calibrationApi.ts
src/features/device/: connectionEvents.ts  deviceConnectionApi.ts  (+18 more)
(+204 files in other folders)
