[package]
name = "lumasync"
version = "1.0.3"
description = "LumaSync — tray-first ambient lighting desktop app"
authors = ["voyvodka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumasync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.50.0", features = ["rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.4"
