[package]
name = "lumasync"
version = "1.4.0"
description = "LumaSync — screen-synced ambient lighting for WS2812B LEDs and Philips Hue"
authors = ["voyvodka"]
edition = "2021"
homepage = "https://lumasync.app"
repository = "https://github.com/voyvodka/LumaSync"
license = "MIT"
readme = "../README.md"
keywords = ["ambilight", "tauri", "led", "ws2812b", "philips-hue"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumasync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.52.1", features = ["rt"] }
# v1.5 W2-A1 — OS keychain abstraction for Hue credentials.
# Enabled backends: macOS Security.framework, Windows CredMan, Linux Secret Service (libsecret via D-Bus).
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
# v1.5 W2-A3 — pure-Rust mDNS responder for LAN bridge discovery.
# Used by `_hue._tcp.local.` (Hue) today; the shared `network::mdns` registry
# also serves the future WLED `_wled._tcp.local.` browser (D5 — single
# responder per process to avoid macOS SO_REUSEPORT contention).
mdns-sd = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.4"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSResponder", "NSWindow", "NSControl", "NSButton", "NSView"] }

[target.'cfg(target_os = "linux")'.dependencies]
xcap = "0.9.4"
